--- a/jquery-jvectormap.css
+++ b/jquery-jvectormap.css
@@ -1,37 +1,38 @@
 .jvectormap-label {
-    position: absolute;
-    display: none;
-    border: solid 1px #CDCDCD;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
+    border: solid 1px #CDCDCD;
     background: #292929;
     color: white;
+    display: none;
     font-family: sans-serif, Verdana;
     font-size: smaller;
     padding: 3px;
+    position: absolute;
 }
 
-.jvectormap-zoomin, .jvectormap-zoomout {
-    position: absolute;
-    left: 10px;
+.jvectormap-zoomin,
+.jvectormap-zoomout {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
     background: #292929;
-    padding: 3px;
     color: white;
-    width: 10px;
-    height: 10px;
     cursor: pointer;
-    line-height: 10px;
+    height: 1em;
+    left: 0.5em;
+    line-height: 1em;
+    padding: 3px;
+    position: absolute;
     text-align: center;
+    width: 1em;
 }
 
 .jvectormap-zoomin {
-    top: 10px;
+    top: 0.5em;
 }
 
 .jvectormap-zoomout {
-    top: 30px;
+    top: 2em;
 }
